--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,6 +21,8 @@ collections:
       - { label: "Featured Image", name: "thumbnail", widget: "image" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "string" }
+      - { label: "GithubRepo", name: "githubRepo", widget: "string" }
+      - { label: "Live", name: "live", widget: "string" }
       - { label: "Is react?", name: "react", widget: "bolean" }
       - { label: "Is gatsby?", name: "gatsby", widget: "bolean" }
       - { label: "Is bootstrap?", name: "bootstrap", widget: "bolean" }
