--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-sharp": "^2.11.1",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-remark-copy-linked-files": "^2.7.0",
     "gatsby-remark-images": "^3.8.0",
     "gatsby-remark-prismjs": "^3.10.0",
@@ -26,6 +27,7 @@
     "gatsby-source-filesystem": "^2.8.0",
     "gatsby-transformer-remark": "^2.13.0",
     "gatsby-transformer-sharp": "^2.9.0",
+    "gsap": "^3.5.1",
     "mdbreact": "^5.0.1",
     "netlify-cms-app": "^2.14.7",
     "node-sass": "^4.14.1",
