--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "gatsby-plugin-manifest": "^2.9.0",
     "gatsby-plugin-netlify-cms": "^4.7.0",
     "gatsby-plugin-offline": "^3.7.0",
+    "gatsby-plugin-postcss": "^3.4.0",
+    "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-sharp": "^2.11.1",
@@ -32,6 +34,7 @@
     "mdbreact": "^5.0.1",
     "netlify-cms-app": "^2.14.7",
     "node-sass": "^4.14.1",
+    "postcss-preset-env": "^6.7.0",
     "prismjs": "^1.22.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
