--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,10 +30,20 @@ collections:
           widget: "boolean",
           default: false,
         }
-      - { label: "GithubRepo", name: "githubRepo", widget: "string" }
-      - { label: "Live", name: "live", widget: "string" }
-      - { label: "Body Pl", name: "body", widget: "markdown" }
-      - { label: "Body Eng", name: "bodyEng", widget: "markdown" }
+      - {
+          label: "GithubRepo",
+          name: "githubRepo",
+          widget: "string",
+          required: false,
+        }
+      - { label: "Live", name: "live", widget: "string", required: false }
+      - { label: "Body Pl", name: "body", widget: "markdown", required: false }
+      - {
+          label: "Body Eng",
+          name: "bodyEng",
+          widget: "markdown",
+          required: false,
+        }
   - name: "exercises"
     label: "Exercises"
     folder: "content/exercises"
@@ -45,10 +55,21 @@ collections:
     fields:
       - { label: "Title Pl", name: "title", widget: "string" }
       - { label: "Title Eng", name: "titleEng", widget: "string" }
-      - { label: "Featured Image", name: "thumbnail", widget: "image" }
+      - {
+          label: "Category",
+          name: "category",
+          widget: "select",
+          options:
+            ["demo", "boilerplate", "proof of concept", "excercise", "snippet"],
+        }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description Pl", name: "description", widget: "string" }
       - { label: "Description Emg", name: "descriptionEng", widget: "string" }
       - { label: "Tags", name: "tags", widget: "string" }
-      - { label: "GithubRepo", name: "githubRepo", widget: "string" }
-      - { label: "Live", name: "live", widget: "string" }
+      - {
+          label: "GithubRepo",
+          name: "githubRepo",
+          widget: "string",
+          required: false,
+        }
+      - { label: "Live", name: "live", widget: "string", required: false }
