--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "bootstrap": "^4.6.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
@@ -35,7 +37,6 @@
     "gatsby-transformer-remark": "^2.13.0",
     "gatsby-transformer-sharp": "^2.9.0",
     "gsap": "^3.5.1",
-    "mdbreact": "^5.0.1",
     "netlify-cms-app": "^2.14.7",
     "node-sass": "^4.14.1",
     "postcss-preset-env": "^6.7.0",
