--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
